--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import jdk.internal.dynalink.linker.LinkerServices
+
 import java.text.SimpleDateFormat
 
 buildscript {
@@ -53,6 +55,7 @@ ext {
         "beetl"               : "com.ibeetl:beetl:3.7.0.RELEASE",
         "swagger-annotations" : "io.swagger:swagger-annotations:1.6.2",
         "enjoy"               : "com.jfinal:enjoy:5.0.0",
+        "fastJson"            :"com.alibaba:fastjson:2.0.49"
     ]
 }
 
@@ -127,6 +130,7 @@ subprojects {
         testImplementation "org.mockito:mockito-junit-jupiter:3.4.4"
         testImplementation "${lib["lagarto"]}"
         testImplementation "${lib["logback-classic"]}"
+        implementation group: 'com.alibaba', name: 'fastjson', version: '2.0.49'
     }
 
     //noinspection GroovyAssignabilityCheck
@@ -169,7 +173,7 @@ subprojects {
             maven {
                 def userName = System.getProperty("un")
                 def passWord = System.getProperty("ps")
-                def releasesRepoUrl = "https://oss.sonatype.org/Repository/local/staging/deploy/maven2/"
+                def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
                 def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
                 url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
 
